Added RSI crossover alert
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@666 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -540,6 +540,14 @@
                class="net.sourceforge.eclipsetrader.trading.alerts.MovingAverageCrossoverPreferences"
                name="General"/>
       </alert>
+      <alert
+            class="net.sourceforge.eclipsetrader.trading.alerts.RSICrossover"
+            id="net.sourceforge.eclipsetrader.alert.rsicrossover"
+            name="RSI Crossover">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.trading.alerts.RSICrossoverPreferences"
+               name="General"/>
+      </alert>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.trading.systems">
