Added UO indicator
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@681 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -451,6 +451,14 @@
                class="net.sourceforge.eclipsetrader.charts.indicators.VFIPreferencePage"
                title="Volume Flow Indicator"/>
       </indicator>
+      <indicator
+            class="net.sourceforge.eclipsetrader.charts.indicators.UO"
+            id="net.sourceforge.eclipsetrader.indicators.uo"
+            name="Ultimate Oscillator - UO">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.indicators.UOPreferencePage"
+               title="Ultimate Oscillator"/>
+      </indicator>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.charts.objects">
