--- a/net.sourceforge.eclipsetrader.charts/plugin.properties
+++ b/net.sourceforge.eclipsetrader.charts/plugin.properties
@@ -25,3 +25,76 @@ horizontalLineTooltip=New horizontal line
 fibolineAction=FiboLine
 fibolineTooltip=New fiboline
 updateAllChartsAction=Update all Charts
+
+extension-point.name.indicators = Chart Indicators
+extension-point.name.objects = Chart Objects
+actionSet.label.charts = Charts
+menu.label.chart = Chart
+themeElementCategory.label.charts = Charts
+colorDefinition.label.background = Background
+colorDefinition.label.scale.background = Scale Background
+colorDefinition.label.scale.foreground = Scale Foreground
+menu.label.indicator = Indicator
+indicator.name.AD = Accumulation / Distribution - AD
+preferencePage.title.AD = Accumulation / Distribution
+indicator.name.AdaptSTOCH = Adaptive Stochastic - AdaptSTOCH
+preferencePage.title.AdaptSTOCH = Adaptive Stochastic
+indicator.name.ATR = Average True Range - ATR
+preferencePage.title.ATR = Average True Range
+indicator.name.BAR = Bars - BAR
+preferencePage.description.BAR = Set the bars type and colors
+preferencePage.title.BAR = Bars
+indicator.name.BB = Bollinger Bands - BB
+preferencePage.title.BB = Bollinger Bands
+indicator.name.CCI = Commodity Channel Index - CCI
+preferencePage.title.CCI = Commodity Channel Index
+indicator.name.DMI = Directional Movement Index - DMI
+preferencePage.title.DMI = Directional Movement Index
+indicator.name.DPO = Detrended Price Oscillator - DPO
+preferencePage.title.DPO = Detrended Price Oscillator
+indicator.name.FI = Force Index - FI
+preferencePage.title.FI = Force Index
+indicator.name.LINE = Lines - LINE
+preferencePage.description.LINE = Set the line input field and color
+preferencePage.title.LINE = Line
+indicator.name.THERM = Market Thermometer - THERM
+preferencePage.description.THERM = Set the market thermometer parameters
+preferencePage.title.THERM = Market Thermometer
+indicator.name.MA = Moving Average - MA
+preferencePage.description.MA = Set the moving average parameters
+preferencePage.title.MA = Moving Average
+indicator.name.MACD = Moving Average Convergence Divergence - MACD
+preferencePage.title.MACD = MACD
+indicator.name.MAOSC = Moving Average Oscillator - MAOSC
+preferencePage.title.MAOSC = Moving Average Oscillator
+indicator.name.RSI = Relative Strength Index - RSI
+preferencePage.title.RSI = RSI
+indicator.name.SAR = Parabolic SAR - SAR
+preferencePage.title.SAR = Parabolic SAR
+indicator.name.STOCH = Stochastic - STOCH
+preferencePage.title.STOCH = Stochastic
+indicator.name.VOL = Volume - VOL
+preferencePage.description.VOL = Set the volume bar colors
+preferencePage.title.VOL = Volume
+indicator.name.VT = Volume Trends - VT
+preferencePage.title.VT = Volume Trends
+indicator.name.SD = Standard Deviation - SD
+preferencePage.title.SD = Standard Deviation
+indicator.name.ROC = Rate Of Change - ROC
+preferencePage.title.ROC = Rate Of Change
+indicator.name.VIDYA = Tushar Chande's Vidya - VIDYA
+preferencePage.title.VIDYA = Tushar Chande's Vidya
+indicator.name.VFI = Volume Flow Indicator - VFI
+preferencePage.title.VFI = Volume Flow Indicator
+indicator.name.UO = Ultimate Oscillator - UO
+preferencePage.title.UO = Ultimate Oscillator
+object.name.line = Line
+preferencePage.title.line = Line
+object.name.horizontalLine = Horizontal Line
+preferencePage.title.horizontalLine = Horizontal Line
+object.name.fiboline = FiboLine
+preferencePage.title.fiboline = FiboLine
+object.name.sellArrow = Sell Arrow
+object.name.buyArrow = Buy Arrow
+object.name.fibonacciFan = Fibonacci Fan Lines
+preferencePage.title.fibonacciFan = Fibonacci Fan Lines
