--- a/net.sourceforge.eclipsetrader.core/plugin.properties
+++ b/net.sourceforge.eclipsetrader.core/plugin.properties
@@ -9,3 +9,20 @@ convertCurrencyAction=Convert...
 securitiesActionSet=Securities
 newSecurityAction=Security
 newSecurityActionTooltip=Create new security
+extension-point.name.Feeds = Security Feed
+extension-point.name.News = News Provider
+extension-point.name.Patterns = Price Pattern
+extension-point.name.AccountProviders = Account Providers
+activity.name.Hidden = EclipseTrader Hidden Views
+wizard.name.CSV = CSV Data
+wizard.description.ExportCSV = Export securities data to CSV files.
+perspective.name.Default = Default
+page.name.General = General
+page.name.Plugins = Plugins
+page.name.Network = Network
+page.name.Data = Data
+page.name.Currencies = Currencies
+themeElementCategory.label.SecuritiesView = Securities View
+colorDefinition.label.Background = Background
+colorDefinition.label.Foreground = Foreground
+fontDefinition.label = Font
