--- a/net.sourceforge.eclipsetrader.news/plugin.properties
+++ b/net.sourceforge.eclipsetrader.news/plugin.properties
@@ -23,3 +23,22 @@ PreferencePages.News=News
 PreferencePages.RSSNews=RSS News
 
 NewsProvider.RSS.name=RSS News
+actionSet.label.news = News Feed Control
+menu.label.news = News
+themeElementCategory.label.newsList = News List
+colorDefinition.label.newsList.background = Background
+colorDefinition.label.newsList.foreground = Foreground
+fontDefinition.label.newsList.font = Font
+themeElementCategory.label.newsList.read = Readed Item
+colorDefinition.label.newsList.read.background = Background
+colorDefinition.label.newsList.read.foreground = Foreground
+fontDefinition.label.newsList.read.font = Font
+themeElementCategory.label.newsList.added = Recently Added Item
+colorDefinition.label.newsList.added.background = Background
+colorDefinition.label.newsList.added.foreground = Foreground
+fontDefinition.label.newsList.added.font = Font
+action.label.next = Next
+action.label.previous = Previous
+action.label.update = Update
+action.tooltip.updateNews = Update news
+action.label.showNews = Show News
