--- a/net.sourceforge.eclipsetrader/plugin.properties
+++ b/net.sourceforge.eclipsetrader/plugin.properties
@@ -4,3 +4,15 @@ Version: {0}\n\
 Build id: {1}\n\
 \n\
 {2}
+
+product.name.eclipseTrader = EclipseTrader
+actionSet.label.softwareUpdates = Software Updates
+menu.label.softwareUpdates = Software Updates
+action.label.newUpates = Find and Install...
+action.label.configManager = Manage Configuration...
+command.name.pasteSpecial = Paste Special
+command.name.settings = Settings
+page.name.appearance = Appearance
+page.name.colorsAndFonts = Colors and Fonts
+page.name.startupAndShutdown = Startup and Shutdown
+view.name.progressView = Progress View
